Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <h1>
 <a id="mebi-php-framework" class="anchor" href="#mebi-php-framework" aria-hidden="true"><span class="octicon octicon-link"></span></a>mebi-php-framework</h1>
 
-<p>Very basic PHP framework, based on MVC.</p>
+<p>Very simple PHP framework, based on MVC.</p>
 
 <p>Designed with MVC-principles in mind, this framework provides some basic functions like webrouting and view-components.</p>
 
