Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Mebi-php-framework</h1>
-      <h2 class="project-tagline">Very basic PHP framework, based on MVC.</h2>
+      <h2 class="project-tagline">Very simple PHP framework, based on MVC.</h2>
       <a href="https://github.com/rocre/mebi-php-framework" class="btn">View on GitHub</a>
       <a href="https://github.com/rocre/mebi-php-framework/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/rocre/mebi-php-framework/tarball/master" class="btn">Download .tar.gz</a>
